# poke-agent

./: .gitignore  README.md  agent.py  poke_agent.py  poke_api.py  requirements.txt  showdown.py  todo.txt
classes/: agent_toolkit.py  api.py  battle_data.py  client.py  opponent.py  pokemon.py  sharedstate.py  trainer.py
classes/agents/: analysis_agent.py  battle_agent.py  decision_agent.py
classes/dex/: dex_api.py
dex-api/: dexapi.js  fetchPokemon.js  package-lock.json  package.json
docs/: agents.drawio
poke-agent/: pyproject.toml  requirements.txt  showdown.py
poke-agent/classes/: agent_toolkit.py  battle_data.py  battle_state.py  client.py  dex_client.py  opponent.py  player.py  pokemon.py  sharedstate.py
poke-agent/classes/_old/: battle_data.py  client.py  helpers.py  models.py  trainer.py
poke-agent/classes/agents/: __init__.py  analysis_agent.py  battle_agent.py  decision_agent.py  history_agent.py
poke-agent/classes/dex/: dex_api.py  smogon_client.py
poke-agent/docs/: dex_basic_dump.json  dex_pokemon_dump.json
poke-agent/utils/: config.py  helpers.py  logging.py
utils/: helpers.py
